# spec-assistant

./: .env  .gitignore  README.md  all_chunks_export.txt  debug_chunks.py  package-lock.json  prepare_embed_input.py  pyproject.toml
app/: main.py
app/routers/: chat.py  chunk.py  embed.py  parse.py  upload.py
app/services/: llm.py  pdf_utils.py  pinecone_utils.py
app/utils/: formatter.py  pdf_chunker.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: api.js
frontend/src/components/: ChatBox.jsx  CitationLink.jsx  FilePreview.js  FilePreview.jsx  PDFPreview.js  PDFPreview.jsx  PDFViewer.jsx  SAPFieldsTable.jsx  UploadForm.jsx  highlight.css
frontend/src/pages/: HomePage.jsx
frontend/src/utils/: scrollToSection.js
sample_files/: AD-CT-2023 (version 1).xlsx  EC-MS-0363 - CVT-VT.docx
